# uncle-bob-bowling-game-kata

./: .gitignore  README.md
.github/workflows/: python.yml
python/: pyproject.toml
python/bowling/: Game.py  ScoreCalculatorService.py  __init__.py  bowling.py
python/tests/: test_bowling.py
